# ciboulette

./: .gitignore  LICENSE  README.md  __init__.py  check.ipynb  ciboulette-sector.ipynb  indiserver.service  ip.netplan  setup.py  sync.ipynb  tests.ipynb  track.ipynb
aavso/: README.md  compoments.py  datadownload.py  vsx.py  webobs.py
base/: ciboulette.py  ciboulettepy.py  ciboulettetable.py  constant.py  constent.py  tests.ipynb
configuration/: 50mm.vot  CIBOULETTE.vot  SPECTRE.vot  base_zerop2w_installation.txt  indiserver.properties  installation.properties  ip.netplan  jupyterlab.service
db/: UT1.db
filtering/: README.md  filters.py
indiclient/: README.md  _astropy_init.py  camera.py  copyright.txt  filterwheel.py  getprop.py  getproplist.py  imx477.py  indiEAFpy.py  indicam.py  indiclient.py  indifilter.py  indifocuser.py  indimount.py  indisa200.py  name.txt  raspicam.sh  spectrograph.py  telescope.py  vectorlist.py
indiclient/indi-3rdparty/indi-sa200/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h.cmake  history.command  indi_sa200  indi_sa200.cpp  indi_sa200.cpp.python  indi_sa200.cpp.wiringpi  indi_sa200.h  indi_sa200.xml.cmake  install_manifest.txt
indiclient/indi-3rdparty/indi-sa200/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
mastdb/: mast.py
notebook/: 1036_Ganymed.ipynb  Apophis.ipynb  EAFpy.ipynb  SA200.ipynb  SQLLite.ipynb  camera.ipynb  example-atomicline.ipynb  example-focuser.ipynb  exemple-SA200.ipynb  exemple-aavso.ipynb  exemple-archives.ipynb  exemple-base.ipynb  exemple-camera.ipynb  exemple-filter.ipynb  exemple-filters.ipynb  exemple-mount.ipynb  exemple-planning.ipynb  exemple-specutils.ipynb  maps.ipynb  mast.ipynb  scheduler-alpaca.ipynb  specutils.ipynb  tests.ipynb
sector/: README.md  maps.py  markers.py  projection.py  sector.py  sectorpy.py
skychart/: observationlist.py
spectrum/: Pn_R_hd8538_20231008_836.fits  README.md  SA200Motor.py  atomicline.py  atomicline_CaI.csv  (+18 more)
(+48 files in other folders)
